corrected errors - size in image and duplicated id for form input

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -8,12 +8,12 @@
                     <picture>
                         <source
                             media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/mob-chocolate-cubes-84x69@2x.png" size="84">
+                            srcset="./images/buy-now/mob-chocolate-cubes-84x69@2x.png">
                         <source media="screen and (min-width: 768px)"
-                            srcset="./images/buy-now/tab-des-chocolate-cubes-120x107.png" size="120">
+                            srcset="./images/buy-now/tab-des-chocolate-cubes-120x107.png">
                         <source
                             media="screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/tab-des-chocolate-cubes-120x107@2x.png" size="120">
+                            srcset="./images/buy-now/tab-des-chocolate-cubes-120x107@2x.png">
                         <img src="./images/buy-now/mob-chocolate-cubes-84x69.png" alt="chocolate cubes">
                     </picture>
                     <button type="button" class="btn btn-other btn-29">100 g</button>
@@ -22,13 +22,12 @@
                     <picture>
                         <source
                             media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/mob-hazelnuts-milk-white-chocolate-cubes-84x69@2x.png" size="84">
+                            srcset="./images/buy-now/mob-hazelnuts-milk-white-chocolate-cubes-84x69@2x.png">
                         <source media="screen and (min-width: 768px)"
-                            srcset="./images/buy-now/tab-des-hazelnuts-milk-white-chocolate-cubes-120x107.png" size="120">
+                            srcset="./images/buy-now/tab-des-hazelnuts-milk-white-chocolate-cubes-120x107.png">
                         <source
                             media="screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/tab-des-hazelnuts-milk-white-chocolate-cubes-120x107@2x.png"
-                            size="120">
+                            srcset="./images/buy-now/tab-des-hazelnuts-milk-white-chocolate-cubes-120x107@2x.png">
                         <img src="./images/buy-now/mob-hazelnuts-milk-white-chocolate-cubes-84x69.png"
                             alt="hazelnuts milk white chocolate cubes">
                     </picture>
@@ -38,12 +37,12 @@
                     <picture>
                         <source
                             media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/mob-chocolate-bars-84x69@2x.png" size="84">
+                            srcset="./images/buy-now/mob-chocolate-bars-84x69@2x.png">
                         <source media="screen and (min-width: 768px)"
-                            srcset="./images/buy-now/tab-des-chocolate-bars-120x111.png" size="120">
+                            srcset="./images/buy-now/tab-des-chocolate-bars-120x111.png">
                         <source
                             media="screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                            srcset="./images/buy-now/tab-des-chocolate-bars-120x111@2x.png" size="120">
+                            srcset="./images/buy-now/tab-des-chocolate-bars-120x111@2x.png">
                         <img src="./images/buy-now/mob-chocolate-bars-84x69.png" alt="chocolate cubes">
                     </picture>
                     <button type="button" class="btn btn-other btn-29">300 g</button>
@@ -51,23 +50,23 @@
             </ul>
             <div class="mod-buy-form-box">
                 <div class="mod-buy-form-item">
-                    <label class="mod-buy-form-label" for="user-name">Personal information</label>
+                    <label class="mod-buy-form-label" for="buy-user-name">Personal information</label>
                     <div class="mod-buy-inputs-name">
-                        <input class="clear-style mod-buy-form-input mod-buy-input-name" id="user-name" type="text"
+                        <input class="clear-style mod-buy-form-input mod-buy-input-name" id="buy-user-name" type="text"
                             name="user-name" placeholder="Name" required>
-                        <input class="clear-style mod-buy-form-input mod-buy-input-surname" id="user-surname" type="text"
+                        <input class="clear-style mod-buy-form-input mod-buy-input-surname" id="buy-user-surname" type="text"
                             name="user-surname" placeholder="Surname" required>
                     </div>
                 </div>
                 <div class="mod-buy-form-item">
-                    <label class="mod-buy-form-label" for="user-email">E-mail</label>
-                    <input class="clear-style mod-buy-form-input" id="user-email" type="email" name="user-email"
+                    <label class="mod-buy-form-label" for="buy-user-email">E-mail</label>
+                    <input class="clear-style mod-buy-form-input" id="buy-user-email" type="email" name="user-email"
                         placeholder="Enter your email" required>
                 </div>
                 <div class="mod-buy-form-item">
-                    <label class="mod-buy-form-label" for="user-phone">Phone number</label>
+                    <label class="mod-buy-form-label" for="buy-user-phone">Phone number</label>
                     <div class="mod-buy-input-svg">
-                        <input class="clear-style mod-buy-form-input mod-buy-input-phone" id="user-phone" type="tel"
+                        <input class="clear-style mod-buy-form-input mod-buy-input-phone" id="buy-user-phone" type="tel"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" name="user-phone" placeholder="Phone number" required>
                         <div class="mod-buy-flagprefix">
                         <svg class="mod-buy-phone-svg">
@@ -78,9 +77,9 @@
                     </div>
                 </div>
                 <div class="mod-buy-form-item">
-                    <label class="mod-buy-form-label" for="user-card">Card number</label>
+                    <label class="mod-buy-form-label" for="buy-user-card">Card number</label>
                     <div class="mod-buy-input-svg">
-                        <input class="clear-style mod-buy-form-input mod-buy-input-card" id="user-card" type="text"
+                        <input class="clear-style mod-buy-form-input mod-buy-input-card" id="buy-user-card" type="text"
                             pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" name="user-card" placeholder="Enter card"
                             required>
                         <svg class="mod-buy-card-svg">
@@ -89,8 +88,8 @@
                     </div>
                 </div>
                 <div class="mod-buy-form-item">
-                    <label class="mod-buy-form-label" for="user-card">Comment</label>
-                    <textarea class="clear-style mod-buy-form-comment" id="user-comment" name="user-comment" rows="15"
+                    <label class="mod-buy-form-label" for="buy-user-comment">Comment</label>
+                    <textarea class="clear-style mod-buy-form-comment" id="buy-user-comment" name="user-comment" rows="15"
                         placeholder="Text input"></textarea>
                 </div>
                 <button class="btn send clear-style" type="submit">Submit</button>
