--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,1 +1,90 @@
 /* oprócz klasy .reviews pozostałe style rozpoczynają się od .rev- */
+.rev-box {
+    align-self: flex-start;
+}
+
+.reviews>.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    overflow: hidden;
+    margin-bottom: 128px;
+}
+
+.rev-people {
+	gap: 16px;
+	overflow: hidden;
+}
+.rev-image {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+}
+.rev-people-list {
+    text-align: center;
+	position: relative;
+	top: 0;
+	left: 0;
+	display: flex;
+    flex-direction: column;
+	flex-shrink: 0;
+	width: 335px;
+	height: 200px;
+	margin-top: 42px;
+    padding: 56px 18px 42px;
+    background-color: var(--WHITE);
+    border: 1px solid rgba(17, 17, 17, 0.10);
+    border-radius: 15px;
+}
+
+.rev-name {
+    display: block;
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.33; 
+}
+.rev-list-dots {
+    gap: 13px;
+}
+.rev-dot-icon-svg {
+    width: 13px;
+    height: 13px;
+    fill: rgba(17, 17, 17, 0.10);
+}
+.rev-dot-icon-svg.long {
+    width: 28px;
+    height: 13px;
+    fill: var(--ACCENT);
+}
+.rev-btn-leave {
+    height: 41px;
+	padding: 0 28px;
+	border-radius: 100px;
+}
+
+@media screen and (min-width: 1200px) {
+    .reviews>.container {
+        padding: 0 32px;
+    }
+    .rev-people {
+        gap: 28px;
+    }
+    .rev-people-list {
+        width: 360px;
+        padding: 56px 24px 42px;
+    } 
+}
+
+@media screen and (min-width: 768px) {
+    .rev-people-list {
+        width: 344px;
+        padding: 56px 16px 42px;
+    } 
+    .rev-btn-leave {
+        height: 50px;
+	    padding: 0 40px;
+    }
+}
