--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -9,16 +9,16 @@
             <form name="review" class="form-modal-re">
                 <div class="form-modal-details-re">
                     <label for="user-name"></label>
-                    <input type="text" name="user-name" id="user-name" class="input-modal-re" placeholder="Name" required />
+                    <input type="text" name="user-name" id="user-name-rev" class="input-modal-re" placeholder="Name" required />
                 </div>
                 <div class="form-modal-details-re">
                     <label for="email"></label>
-                    <input type="email" name="email" id="email" class="input-modal-re" placeholder="Email" required />
+                    <input type="email" name="email" id="email-rev" class="input-modal-re" placeholder="Email" required />
                 </div>
                 <div class="form-modal-details-re">
                     <label for="phone"></label>
                     <div class="form-field-re">
-                        <input type="tel" name="phone" id="phone" class="input-modal-re input-phone-re"
+                        <input type="tel" name="phone" id="phone-rev" class="input-modal-re input-phone-re"
                             placeholder="Phone number" required />
                         <div class="flag-re">
                             <svg width="24" height="18" class="svg-modal-re">
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-modal-textarea-re">
                     <label for="user-comment"></label>
-                    <textarea name="user-comment" id="user-comment" placeholder="Enter text" class="textarea-re"></textarea>
+                    <textarea name="user-comment" id="user-comment-rev" placeholder="Enter text" class="textarea-re"></textarea>
                 </div>
                 <button type="submit" class="send-button-re">Send</button>
             </form>
