--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,4 +1,4 @@
-<section id="Top=sellers" class="top-sellers container">
+<section id="Top-sellers" class="top-sellers container">
   <h2 class="section-title">
     <a class="link"><span class="accent">TOP</span> SELLERS</a>
   </h2>
