--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
                         alt="Apple&cranberry milk chocolate">
                     <h3 class="prod-item-title">Apple&cranberry</h3>
                     <p class="prod-item-txt">Milk chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">50 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">50 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img"
@@ -25,28 +25,28 @@
                         alt="Lime&sea salt dark chocolate">
                     <h3 class="prod-item-title">Lime&sea salt</h3>
                     <p class="prod-item-txt">Dark chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">66 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">66 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img" src="./images/products/mob-tab-des-pineapple-dark-chocolate-230x201.jpg"
                         alt="Pineapple dark chocolate">
                     <h3 class="prod-item-title">Pineapple</h3>
                     <p class="prod-item-txt">Dark chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">54 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">54 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img" src="./images/products/mob-tab-des-classic-milk-chocolate-230x201.jpg"
                         alt="Classic milk chocolate">
                     <h3 class="prod-item-title">Classic</h3>
                     <p class="prod-item-txt">Milk chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">45 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">45 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img" src="./images/products/mob-tab-des-honey-milk-chocolate-230x201.jpg"
                         alt="Honey milk chocolate">
                     <h3 class="prod-item-title">Honey</h3>
                     <p class="prod-item-txt">Milk chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">50 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">50 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img"
@@ -54,14 +54,14 @@
                         alt="Roasted-fruits dark chocolate">
                     <h3 class="prod-item-title">Roasted-fruits</h3>
                     <p class="prod-item-txt">Dark chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">66 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">66 UAH</button>
                 </li>
                 <li class="prod-list-item">
                     <img class="prod-item-img" src="./images/products/mob-tab-des-classic-white-chocolate-230x201.jpg"
                         alt="Classic white chocolate">
                     <h3 class="prod-item-title">Classic</h3>
                     <p class="prod-item-txt">White chocolate</p>
-                    <button type="button" class="btn btn-md btn-other prod-item-btn">54 UAH</button>
+                    <button type="button" class="btn prod-btn-price btn-other prod-item-btn">54 UAH</button>
                 </li>
             </ul>
         </div>
