--- a/src/css/modal-subscribe.css
+++ b/src/css/modal-subscribe.css
@@ -1,11 +1,9 @@
 /* oprócz klasy .modal-subscribe pozostałe style rozpoczynają się od .mod-sub- */
 .modal-subscribe {
   margin: 0 auto;
-  padding: 32px 24px;
   background-color: var(--LIGHT-BKG);
   border-radius: 15px;
   transform: translate(-50%, -50%);
-  overflow: auto;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -64,6 +62,7 @@
 .mod-subscribe-form-input,
 .mod-subscribe-btn {
   flex-grow: 1;
+
 }
 .mod-subscribe-form-input::placeholder {
   color: rgba(64, 64, 64, 0.3);
@@ -77,6 +76,55 @@
 .btn.close-order:focus {
   color: var(--ACCENT);
 }
+.mod-subscribe-list-one{
+    margin-bottom: 14px;
+}
+
+.mod-subscribe-list-two{
+
+}
+
+
+.mod-sub-button {
+    cursor: pointer;
+    width: 93px;
+    height: 41px;
+    border-radius: 100px;
+    border: none;
+    background-color: var(--ACCENT);
+    color: var(--WHITE);
+    font-family: inherit;
+    font-weight: 600;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mod-sub-button:hover,
+.mod-sub-button:focus {
+    background-color: var(--ACCENT-LIGH);
+    color: var(--ACCENT)
+}
+
+
+.mod-subscribe-close{
+position: absolute;
+top: 14px;
+right: 14px;
+background-color: transparent;
+border: none;
+cursor: pointer;
+}
+
+.mod-subscribe-label{
+    border-radius: 8px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    width: 100%;
+    height: 45px;
+    background-color: transparent;
+    outline: transparent;
+    padding-left: 18px;
+}
+
 
 @media screen and (min-width: 375px) {
   .modal-subscribe {
