--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -11,7 +11,7 @@
 }
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    .subscribe {
+    .sub-container {
         background-image: url(../images/subscribe/mob-subscribe-375x3702@2x.jpg);
     }
 }
