--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -8,15 +8,15 @@
             <p class="modal-header-re">Leave review about <span class="accent">Our chocolate</span></p>
             <form name="review" class="form-modal-re">
                 <div class="form-modal-details-re">
-                    <label for="user-name"></label>
+                    <label for="user-name-rev"></label>
                     <input type="text" name="user-name" id="user-name-rev" class="input-modal-re" placeholder="Name" required />
                 </div>
                 <div class="form-modal-details-re">
-                    <label for="email"></label>
+                    <label for="email-rev"></label>
                     <input type="email" name="email" id="email-rev" class="input-modal-re" placeholder="Email" required />
                 </div>
                 <div class="form-modal-details-re">
-                    <label for="phone"></label>
+                    <label for="phone-rev"></label>
                     <div class="form-field-re">
                         <input type="tel" name="phone" id="phone-rev" class="input-modal-re input-phone-re"
                             placeholder="Phone number" required />
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="form-modal-textarea-re">
-                    <label for="user-comment"></label>
+                    <label for="user-comment-rev"></label>
                     <textarea name="user-comment" id="user-comment-rev" placeholder="Enter text" class="textarea-re"></textarea>
                 </div>
                 <button type="submit" class="send-button-re">Send</button>
