Update section/footer id

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="Footer" class="footer">
   <div class="container">
     <div class="foot-top-div">
       <h2 class="foot-header">
