--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -5,19 +5,39 @@
   <div class="top-content-div">
     <ul class="top-list">
       <li class="top-li">
-        <img
-          class="top-images"
-          srcset="
-            ./images/top-sellers/des-coffee-dark-chocolate-368x464.jpg    1x,
-            ./images/top-sellers/des-coffee-dark-chocolate-368x464@2x.jpg 2x,
-            ./images/top-sellers/tab-coffee-dark-chocolate-344x464.jpg    1x,
-            ./images/top-sellers/tab-coffee-dark-chocolate-344x464@2x.jpg 2x,
-            ./images/top-sellers/mob-coffee-dark-chocolate-335x464.jpg    1x,
-            ./images/top-sellers/mob-coffee-dark-chocolate-335x464@2x.jpg 2x
-          "
-          src="./images/top-sellers/des-coffee-dark-chocolate-368x464.jpg"
-          alt="nuts, chockolate and coffee beans"
-        />
+        <picture>
+          <source
+            media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/mob-coffee-dark-chocolate-335x464@2x.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 768px)"
+            srcset="./images/top-sellers/tab-coffee-dark-chocolate-344x464.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/tab-coffee-dark-chocolate-344x464@2x.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 1200px)"
+            srcset="./images/top-sellers/des-coffee-dark-chocolate-368x464.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/des-coffee-dark-chocolate-368x464@2x.jpg"
+            size=""
+          />
+          <img
+            class="top-images"
+            src="./images/top-sellers/mob-coffee-dark-chocolate-335x464.jpg"
+            alt=""
+          />
+        </picture>
+
         <p class="top-paragraph">
           Crazy enough chocolate originates from a bean just like the coffee bean called Cacao.
           Cacao has been around for thousands of years and was first discovered by the Native
@@ -25,30 +45,52 @@
         </p>
       </li>
       <li class="top-li">
-        <img
-          class="top-images"
-          srcset="
-            ./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464.jpg    1x,
-            ./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464@2x.jpg 2x,
-            ./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464.jpg    1x,
-            ./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464@2x.jpg 2x,
-            ./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464.jpg    1x,
-            ./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464@2x.jpg 2x
-          "
-          src="./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464.jpg"
-          alt="chockolate with almonds"
-        />
+        <picture>
+          <source
+            media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464@2x.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 768px)"
+            srcset="./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 768px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464@2x.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 1200px)"
+            srcset="./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464.jpg"
+            size=""
+          />
+          <source
+            media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464@2x.jpg"
+            size=""
+          />
+          <img
+            class="top-images"
+            src="./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464.jpg"
+            alt=""
+          />
+        </picture>
       </li>
       <li>
-        <img
-          class="top-images top-last-photo"
-          srcset="
-            ./images/top-sellers/des-chocolate-bars-368x464.jpg    1x,
-            ./images/top-sellers/des-chocolate-bars-368x464@2x.jpg 2x
-          "
-          src="./images/top-sellers/des-chocolate-bars-368x464.jpg"
-          alt="different type of chocolate"
-        />
+        <picture>
+          <source
+            media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+            srcset="./images/top-sellers/des-chocolate-bars-368x464@2x.jpg"
+            size=""
+          />
+          <img
+            class="top-images top-last-photo"
+            src=" ./images/top-sellers/des-chocolate-bars-368x464.jpg"
+            alt=""
+          />
+        </picture>
       </li>
     </ul>
     <div class="top-button-div">
