coś tam zmienione ale nie jest dobrze

--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -1,35 +1,84 @@
 <section class="components">
-  <div class="container">
-    <h2 class="comp-title">
+  <div class="container comp-container">
+    <h2 class="section-title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL<span class="accent"> TASTE</span> SENSATION
     </h2>
-    <p class="comp-text">
+    <p>
       At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details.
       From the sourcing of the finest ingredients to the careful crafting of each individual piece,
       every step of our process adds up to one exceptional taste sensation.
     </p>
-    <ul class="comp-images">
-      <li class="comp-picture-chocolate">
-        <img
-          src="./images/components/des-milk-chocolate-bars-206x160.png"
-          alt="pieces of milk chocolate"
-        />
+
+    <ul class="list list-components comp-images">
+      <li class="comp-item comp-picture-chocolate">
+        <a class="link comp-overlay" href="">
+                            <div class="comp-box-overlay">
+                                <picture class="comp-img">
+                                    <source
+                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/mob-tab-milk-chocolate-bars-224x171@2x.png"
+                                        size="224px">
+                                    <source media="screen and (min-width: 1200px)"
+                                        srcset="./images/components/des-milk-chocolate-bars-206x160.png" size="206px">
+                                    <source
+                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/des-milk-chocolate-bars-206x160@2x.png"
+                                        size="206px">
+                                    <img src="./images/components/mob-tab-milk-chocolate-bars-224x171.png"
+                                        alt="milk chocolate bars">
+                                </picture>
         <h5 class="comp-caption">MILK CHOCOLATE</h5>
       </li>
-      <li class="comp-picture">
-        <img src="./images/components/des-bootle-of-milk-206x160.png" alt="bootle of milk" />
-        <h5>MILK</h5>
+      <li class="comp-item comp-picture">
+        <a class="link comp-overlay" href="">
+                            <div class="components-box-overlay">
+                                <picture class="comp-img">
+                                    <source
+                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/mob-tab-bootle-of-milk-224x171@2x.png" size="224px">
+                                    <source media="screen and (min-width: 1200px)"
+                                        srcset="./images/components/des-bootle-of-milk-206x160.png" size="206px">
+                                    <source
+                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/des-bootle-of-milk-206x160@2x.png" size="206px">
+                                    <img src="./images/components/mob-tab-bootle-of-milk-224x171.png"
+                                        alt="bottle of milk">
+                                </picture>
+        <h5 class="comp-signature">MILK</h5>
       </li>
-      <li class="comp-picture-nuts">
-        <img src="./images/components/des-hazelnuts-206x160.png" alt="hazelnuts" />
+      <li class="comp-item comp-picture-nuts">
+        <a class="link comp-overlay" href="">
+                            <div class="components-box-overlay">
+                                <picture class="comp-img">
+                                    <source
+                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/mob-tab-hazelnuts-224x171@2x.png" size="224px">
+                                    <source media="screen and (min-width: 1200px)"
+                                        srcset="./images/components/des-hazelnuts-206x160.png" size="206px">
+                                    <source
+                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/des-hazelnuts-206x160@2x.png" size="206px">
+                                    <img src="./images/components/mob-tab-hazelnuts-224x171.png" alt="hazelnuts">
+                                </picture>
         <h5 class="comp-caption">NUTS</h5>
       </li>
-      <li class="comp-picture">
-        <img
-          src="./images/components/mob-tab-chocolate-drops-224x171.png"
-          alt="drops of chocolate"
-        />
-        <h5>SEMI-SWEET CHOCOLATE</h5>
+      <li class="comp-item comp-picture">
+        <a class="link comp-overlay" href="">
+                            <div class="comp-box-overlay">
+                                <picture class="comp-img">
+                                    <source
+                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/mob-tab-chocolate-drops-224x171@2x.png"
+                                        size="224px">
+                                    <source media="screen and (min-width: 1200px)"
+                                        srcset="./images/components/des-chocolate-drops-206x160.png" size="206px">
+                                    <source
+                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                        srcset="./images/components/des-chocolate-drops-206x160@2x.png" size="206px">
+                                    <img src="./images/components/mob-tab-chocolate-drops-224x171.png"
+                                        alt="chocolate drops">
+                                </picture>
+        <h5 class="comp-signature">SEMI-SWEET CHOCOLATE</h5>
       </li>
     </ul>
   </div>
