--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -3,7 +3,7 @@
     <h2 class="section-title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL<span class="accent"> TASTE</span> SENSATION
     </h2>
-    <p>
+    <p class="comp-text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details.
       From the sourcing of the finest ingredients to the careful crafting of each individual piece,
       every step of our process adds up to one exceptional taste sensation.
