--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,14 +23,14 @@
         <div class="foot-social-media">
           <ul class="foot-social-media-list">
             <li class="foot-social-icon list">
-              <a class="link foot-social-link" href="">
+              <a class="link foot-social-link" href="#">
                 <svg class="foot-social-svg" width="" height="">
                   <use href="./images/icons.svg#instagram" />
                 </svg>
               </a>
             </li>
             <li class="foot-social-icon list">
-              <a class="link foot-social-link" href="">
+              <a class="link foot-social-link" href="#">
                 <svg class="foot-social-svg" width="16" height="16">
                   <use href="./images/icons.svg#twitter" />
                 </svg>
