--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -24,7 +24,7 @@
           <ul class="foot-social-media-list">
             <li class="foot-social-icon list">
               <a class="link foot-social-link" href="#">
-                <svg class="foot-social-svg" width="" height="">
+                <svg class="foot-social-svg" width="16" height="16">
                   <use href="./images/icons.svg#instagram" />
                 </svg>
               </a>
