--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -5,7 +5,7 @@
     <div class="how-content">
       <iframe
         class="how-video"
-        src="https://www.youtube.com/embed/_5ja7UNHZpo?start=23&fs=0&modestbranding=1&controls=2&showinfo=0"
+        src="https://www.youtube.com/embed/oWjlmi9bbQA"
         title="YouTube video player"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
