id for section Our products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,4 @@
-<section class="products">
-    <a name="Our-products"></a>
+<section class="products" id="Our-products">
     <div class="container prod-container">
         <h2 class="section-title">Our <span class="accent">products</span></h2>
         <div class="prod-box">
