top-sellers - paddings

--- a/src/css/top-sellers.css
+++ b/src/css/top-sellers.css
@@ -20,6 +20,7 @@
 }
 .top-sellers {
   padding-top: 72px;
+  padding-bottom: 72px;
 }
 .top-button-div {
   display: flex;
@@ -31,6 +32,8 @@
   .top-sellers {
     display: flex;
     flex-direction: column;
+    padding-bottom: 100px;
+    padding-top: 100px;
   }
 
   .top-list {
@@ -63,6 +66,10 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .top-sellers {
+    padding-bottom: 128px;
+    padding-top: 128px;
+  }
   .top-images {
     width: 368px;
     height: 464px;
