--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,14 +7,16 @@
             <div class="hero-buttons">
                 <button data-modal-buy1-open type="button" class="btn btn-accent hero-button-buy hero-button-margin">Buy
                     now</button>
-                <button type="button" class="btn btn-outln hero-button-buy">How its made</button>
+                <button type="button" class="btn btn-outln hero-button-buy">How it's made</button>
             </div>
             <div class="hero-scroll">
                 <p class="hero-scroll-text">scroll down</p>
                 <button type="button" class="hero-icon">
-                    <svg class="hero-icon-trans" width="16" height="16">
-                        <use href="./images/icons.svg#scroll-down"></use>
-                    </svg>
+                    <a href="#Footer" class="link">
+                        <svg class="hero-icon-trans" width="16" height="16">
+                            <use href="./images/icons.svg#scroll-down"></use>
+                        </svg>
+                    </a>
                 </button>
             </div>
         </div>
