--- a/src/css/products.css
+++ b/src/css/products.css
@@ -2,6 +2,7 @@
 .prod-container {
     display: flex;
     flex-direction: column;
+    margin-bottom: 72px;
     align-items: center;
     gap: 50px;
     overflow: hidden;
@@ -62,8 +63,16 @@
     fill: var(--ACCENT);
 }
 @media screen and (min-width: 768px) {
+    .prod-container {
+        margin-bottom: 100px;
+    }
     .prod-list-item {
         width: 270px;
         padding: 32px 20px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .prod-container {
+        margin-bottom: 128px;
     }
 }
