feat:4 section/hero final improvements

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,13 +11,13 @@
             </div>
             <div class="hero-scroll">
                 <p class="hero-scroll-text">scroll down</p>
+                <a href="#Footer" class="link"></a>
                 <button type="button" class="hero-icon">
-                    <a href="#Footer" class="link">
-                        <svg class="hero-icon-trans" width="16" height="16">
-                            <use href="./images/icons.svg#scroll-down"></use>
-                        </svg>
-                    </a>
+                    <svg class="hero-icon-trans" width="16" height="16">
+                        <use href="./images/icons.svg#scroll-down"></use>
+                    </svg>
                 </button>
+                </a>
             </div>
         </div>
     </div>
