--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,7 +1,6 @@
 <!-- element zamykający to okno musi mieć parametr data-modal-subscribe-close -->
 <!-- klasy powinny mieć przedrostek mod-sub- -->
 
-
 <div class="is-hidden modal" data-modal-subscribe>
   <div class="modal-subscribe">
     <div class="mod-subscribe-image">
@@ -34,11 +33,8 @@
               required
             />
           </li>
-          <li class="mod-subscribe-list-two">
-            <button
-              class="btn btn-accent mod-subscribe-btn clear-style"
-              type="submit"
-            >
+          <li class="mod-subscribe-list-one">
+            <button class="mod-sub-button clear-style btn" type="submit">
               Subscribe
             </button>
           </li>
