--- a/src/css/modal-subscribe.css
+++ b/src/css/modal-subscribe.css
@@ -1,6 +1,5 @@
 /* oprócz klasy .modal-subscribe pozostałe style rozpoczynają się od .mod-sub- */
 
-
 .modal-subscribe {
   margin: 0 auto;
   background-color: var(--LIGHT-BKG);
@@ -15,6 +14,7 @@
 
 .mod-subscribe-text {
   padding: 32px 24px;
+  
 }
 .mod-subscribe-title {
   color: var(--DARK);
@@ -22,6 +22,7 @@
 
   text-transform: uppercase;
   margin-bottom: 24px;
+  text-align: left;
 }
 .mod-subscribe-image {
   color: var(--WHITE);
@@ -53,6 +54,7 @@
 .mod-subscribe-list {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 .mod-subscribe-input {
   padding: 14px 18px;
@@ -82,8 +84,9 @@
 
 .mod-sub-button {
   cursor: pointer;
-  width: 109px;
-  height: 41px;
+  width: 137px;
+  height: 52px;
+  padding: 17px 40px;
   border-radius: 100px;
   border: none;
   background-color: var(--ACCENT);
@@ -151,15 +154,17 @@
 }
 .mod-subscribe-title {
   margin-bottom: 28px;
+  
 }
 .mod-subscribe-list {
   gap: 8px;
 }
-.mod-subscribe-form-input {
+.mod-subscribe-input {
   padding: 14px 24px;
   border-radius: 30px;
 }
-.mod-subscribe-form-input::placeholder {
+.mod-subscribe-input::placeholder {
   font-size: 18px;
   letter-spacing: -0.36px;
 }
+
