--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -1,85 +1,153 @@
 <section class="components">
-  <div class="container comp-container">
-    <h2 class="section-title">
-      IT ALL ADDS UP TO ONE EXCEPTIONAL<span class="accent"> TASTE</span> SENSATION
-    </h2>
-    <p class="comp-text">
-      At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details.
-      From the sourcing of the finest ingredients to the careful crafting of each individual piece,
-      every step of our process adds up to one exceptional taste sensation.
-    </p>
-
-    <ul class="list list-components comp-images">
-      <li class="comp-item comp-picture-chocolate">
-        <a class="link comp-overlay" href="">
-                            <div class="comp-box-overlay">
-                                <picture class="comp-img">
-                                    <source
-                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/mob-tab-milk-chocolate-bars-224x171@2x.png"
-                                        size="224px">
-                                    <source media="screen and (min-width: 1200px)"
-                                        srcset="./images/components/des-milk-chocolate-bars-206x160.png" size="206px">
-                                    <source
-                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/des-milk-chocolate-bars-206x160@2x.png"
-                                        size="206px">
-                                    <img src="./images/components/mob-tab-milk-chocolate-bars-224x171.png"
-                                        alt="milk chocolate bars">
-                                </picture>
-        <h5 class="comp-caption">MILK CHOCOLATE</h5>
-      </li>
-      <li class="comp-item comp-picture">
-        <a class="link comp-overlay" href="">
-                            <div class="components-box-overlay">
-                                <picture class="comp-img">
-                                    <source
-                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/mob-tab-bootle-of-milk-224x171@2x.png" size="224px">
-                                    <source media="screen and (min-width: 1200px)"
-                                        srcset="./images/components/des-bootle-of-milk-206x160.png" size="206px">
-                                    <source
-                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/des-bootle-of-milk-206x160@2x.png" size="206px">
-                                    <img src="./images/components/mob-tab-bootle-of-milk-224x171.png"
-                                        alt="bottle of milk">
-                                </picture>
-        <h5 class="comp-signature">MILK</h5>
-      </li>
-      <li class="comp-item comp-picture-nuts">
-        <a class="link comp-overlay" href="">
-                            <div class="components-box-overlay">
-                                <picture class="comp-img">
-                                    <source
-                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/mob-tab-hazelnuts-224x171@2x.png" size="224px">
-                                    <source media="screen and (min-width: 1200px)"
-                                        srcset="./images/components/des-hazelnuts-206x160.png" size="206px">
-                                    <source
-                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/des-hazelnuts-206x160@2x.png" size="206px">
-                                    <img src="./images/components/mob-tab-hazelnuts-224x171.png" alt="hazelnuts">
-                                </picture>
-        <h5 class="comp-caption">NUTS</h5>
-      </li>
-      <li class="comp-item comp-picture">
-        <a class="link comp-overlay" href="">
-                            <div class="comp-box-overlay">
-                                <picture class="comp-img">
-                                    <source
-                                        media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/mob-tab-chocolate-drops-224x171@2x.png"
-                                        size="224px">
-                                    <source media="screen and (min-width: 1200px)"
-                                        srcset="./images/components/des-chocolate-drops-206x160.png" size="206px">
-                                    <source
-                                        media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
-                                        srcset="./images/components/des-chocolate-drops-206x160@2x.png" size="206px">
-                                    <img src="./images/components/mob-tab-chocolate-drops-224x171.png"
-                                        alt="chocolate drops">
-                                </picture>
-        <h5 class="comp-signature">SEMI-SWEET CHOCOLATE</h5>
-      </li>
-    </ul>
-  </div>
+    <div class="container comp-container">
+        <h2 class="section-title">It all adds up to one exeptional <span class="accent">taste</span> sensation
+        </h2>
+        <p>At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the
+            sourcing of the finest ingredients to the careful crafting of each individual piece, every step of
+            our process adds up to one exceptional taste sensation.</p>
+        <ul class="list comp-list">
+            <li class="comp-item comp-bkg-accent">
+                <a class="link comp-lnk-overlay" href="">
+                    <div class="comp-box-overlay">
+                        <picture class="comp-img">
+                            <source
+                                media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/mob-tab-milk-chocolate-bars-224x171@2x.png">
+                            <source media="screen and (min-width: 1200px)"
+                                srcset="./images/components/des-milk-chocolate-bars-206x160.png">
+                            <source
+                                media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/des-milk-chocolate-bars-206x160@2x.png">
+                            <img src="./images/components/mob-tab-milk-chocolate-bars-224x171.png"
+                                alt="milk chocolate bars">
+                        </picture>
+                        <h3 class="comp-item-title">Milk chocolate</h3>
+                        <div class="comp-item-overlay">
+                            <h3 class="comp-title-overlay">Milk chocolate</h3>
+                            <ul class="list comp-list-buttons">
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-accent">chocolate</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-outln-accent">the
+                                        benefits</button>
+                                </li>
+                            </ul>
+                            <p>Milk chocolate is a solid chocolate confectionery
+                                containing cocoa, sugar and milk. It is the most consumed type of chocolate.
+                                Chocolate was originally sold and consumed as a beverage in pre-Columbian times.
+                                Although four-fifths of all milk chocolate is sold in the United States and
+                                Europe.</p>
+                        </div>
+                    </div>
+                </a>
+    
+            </li>
+            <li class="comp-item comp-bkg-white">
+                <a class="link comp-lnk-overlay" href="">
+                    <div class="comp-box-overlay">
+                        <picture class="comp-img">
+                            <source
+                                media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/mob-tab-bootle-of-milk-224x171@2x.png">
+                            <source media="screen and (min-width: 1200px)"
+                                srcset="./images/components/des-bootle-of-milk-206x160.png">
+                            <source
+                                media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/des-bootle-of-milk-206x160@2x.png">
+                            <img src="./images/components/mob-tab-bootle-of-milk-224x171.png" alt="bottle of milk">
+                        </picture>
+                        <h3 class="comp-item-title">Milk</h3>
+                        <div class="comp-item-overlay">
+                            <h3 class="comp-title-overlay">Milk</h3>
+                            <ul class="list comp-list-buttons">
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-accent">milk</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-outln-accent">the
+                                        benefits</button>
+                                </li>
+                            </ul>
+                            <p>Milk is a white liquid food produced by the mammary glands
+                                of mammals. It is the primary source of nutrition for young mammals (including
+                                breastfed human infants) before they are able to digest solid
+                                food.Early-lactation milk, which is called colostrum, contains antibodies that
+                                strengthen the immune system.</p>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="comp-item comp-bkg-dark">
+                <a class="link comp-lnk-overlay" href="">
+                    <div class="comp-box-overlay">
+                        <picture class="comp-img">
+                            <source
+                                media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/mob-tab-hazelnuts-224x171@2x.png">
+                            <source media="screen and (min-width: 1200px)"
+                                srcset="./images/components/des-hazelnuts-206x160.png">
+                            <source
+                                media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/des-hazelnuts-206x160@2x.png">
+                            <img src="./images/components/mob-tab-hazelnuts-224x171.png" alt="hazelnuts">
+                        </picture>
+                        <h3 class="comp-item-title">Nuts</h3>
+                        <div class="comp-item-overlay">
+                            <h3 class="comp-title-overlay">Nuts</h3>
+                            <ul class="list comp-list-buttons">
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-accent">nuts</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-outln-accent">the
+                                        benefits</button>
+                                </li>
+                            </ul>
+                            <p>Almonds, pistachios, and walnuts are some types of nuts
+                                that contain healthy nutrients. When eaten as part of a nutrient-dense diet,
+                                these 9 nuts may offer benefits such as reducing your risk of heart disease.
+                                They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re
+                                great on their own.</p>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="comp-item comp-bkg-white">
+                <a class="link comp-lnk-overlay" href="">
+                    <div class="comp-box-overlay">
+                        <picture class="comp-img">
+                            <source
+                                media="screen and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/mob-tab-chocolate-drops-224x171@2x.png">
+                            <source media="screen and (min-width: 1200px)"
+                                srcset="./images/components/des-chocolate-drops-206x160.png">
+                            <source
+                                media="screen and (min-width: 1200px) and ((min-device-pixel-ratio: 2) or (min-resolution: 192dpi) or (min-resolution: 2dppx))"
+                                srcset="./images/components/des-chocolate-drops-206x160@2x.png">
+                            <img src="./images/components/mob-tab-chocolate-drops-224x171.png" alt="chocolate drops">
+                        </picture>
+                        <h3 class="comp-item-title">Semi - sweet chocolate</h3>
+                        <div class="comp-item-overlay">
+                            <h3 class="comp-title-overlay">Semi - sweet chocolate</h3>
+                            <ul class="list comp-list-buttons">
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-accent">sweet chocolate</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn comp-btn btn-outln-accent">the
+                                        benefits</button>
+                                </li>
+                            </ul>
+                            <p>Semi-sweet chocolate has a cocoa solid content of 35 to
+                                65%. One of the best ways to gain an understanding of this type of chocolate is
+                                to compare it to a different type of chocolate. Semisweet is darker than milk
+                                chocolate. In a taste comparison, it has a slightly bitter taste whereas milk
+                                chocolate is sweeter and more mellow.</p>
+                        </div>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
 </section>
